--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -1,5 +1,5 @@
 #summary The JSPDO JS API.
-#labels Phase-UserDocs,Topic-JS-API
+#labels Phase-UserDocs,Topic-JS-API,Topic-cvv8
 
 <wiki:toc/>
 
@@ -25,7 +25,7 @@ This class is synonymous with a database connection. Its main responsibilities a
 || `void begin()` || Starts a transaction. Nested transactions are not supported. ||
 || `void commit()` || Commits the current opened transaction. ||
 || `void rollback()` || Rolls back the current transaction. ||
-|| `void fetchAll(object)` || Executes a query and returns all result records. Described in detail below. ||
+|| `Array fetchAll(object)` || Executes a query and returns all result records. Described in detail below. ||
 || `mixed selectValue(string|Object)` || Selects a single value from the database. Described below. ||
 || `string quote(string value)` || Returns the SQL-quoted form of a string. ||
 || `string qualify(string identifier)` || Returns the SQL-quoted form of a table or column name. ||
@@ -185,7 +185,7 @@ These objects are _only_ to be created by calling `JSPDO.prepare()`, and not via
 || `void bind(Statement)` || Binds all columns from the `Statement` object argument to the columns in the current statement. This can be used, e.g. to copy results from one table into another. TODO: accept array of param column numbers/names to copy, instead of copying all. ||
 || `bool step()` || "Steps" one row through a result set or executes a non-result query. Returns false if it is at the end of the set (or the query had no data to return, like an `INSERT`) or true if it successfully fetched a row. ||
 || `Array stepArray()` || Like `step()` but returns all of the columns from the fetched row as an array of values. It returns `null` at the end of the result set. ||
-|| `Array stepObject()` || Like `step()` but returns all of the columns from the fetched row as an Object, using the column names as the object keys. It returns `null` at the end of the result set. ||
+|| `Object stepObject()` || Like `step()` but returns all of the columns from the fetched row as an Object, using the column names as the object keys. It returns `null` at the end of the result set. ||
 || `mixed get(index)` || Returns a value from a fetched row, using the given _0-based_ column index. (The inconsistency is not mine - that's just how SQL APIs work!) Described in more detail below. ||
 || `string columnName(index)` || The name of the 0-based result set column. ||
 || `int columnType(index)` || The cpdo-defined type ID for row data from the given 0-based column index. (Do not rely on stable values between releases!) ||
