Edited wiki page JSPDO_API through web user interface.

--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -161,7 +161,7 @@ Examples:
 var count = db.selectValue("SELECT COUNT(*) FROM T");
 var otherCount = db.selectValue({sql:"SELECT A, B, COUNT(*) FROM T", column:2});
 
-hasObject42 = db.selectValue({
+var hasObject42 = db.selectValue({
     sql: db.prepare("SELECT COUNT(*) FROM T WHERE ID=?"),
     bind:[42]
 });
