--- a/wiki/V8Convert.wiki
+++ b/wiki/V8Convert.wiki
@@ -1,7 +1,7 @@
 #summary The V8Convert (cvv8) sub-project
 #labels Phase-UserDocs,Topic-CPlusPlus,Featured
 
-*Newsflash:* as of r1920 we have v8-convert building on MSVC 2010. i occasionally break the MSVC bits by accident (i don't have Windows/MSVC to test on), so if you find that it doesn't compile please post the error logs [http://groups.google.com/group/v8-juice-js-dev our mailing list] and i'll be happy to take a look. (It is completely untested on MSVC versions earlier than 2010, by the way.)
+*Newsflash:* as of r1920 we have v8-convert building on MSVC 2010. i occasionally break the MSVC bits by accident (i don't have Windows/MSVC to test on), so if you find that it doesn't compile please post the error logs to [http://groups.google.com/group/v8-juice-js-dev our mailing list] and i'll be happy to take a look. (It is completely untested on MSVC versions earlier than 2010, by the way, but Cohen suspects that it "should work" with MSVC 2008.)
 
 <wiki:toc/>
 
@@ -13,11 +13,11 @@ The v8-convert API (a.k.a. `cvv8`, because it's easier to type than `v8cv`) is a
 
 v8-convert is not a "mutually exclusive solution" to its problem domain, and it can easily be used in conjunction with other v8 client libraries like [https://github.com/tsa/vu8 vu8] and [http://www.nodejs.org/ node.js].
 
-It's main features/focus are:
+!V8Convert's main features/focus are:
 
   * Converting between v8 Value handles and "native types" using a generic interface. This allows us to write generic algorithms which convert between JS/C++ without having to know the exact types they're dealing with.  The basic POD types and some STL types are supported out of the box and plugging in one's own types is normally quite simple.
-  * Converting free- and member functions into `v8::InvocationCallback` functions. These generated functions convert the !JavaScript-originated function arguments into native counterparts, forward the data to the original native function, and convert the return values back to something JS can use. (The `void` return type is translated to the `undefined` JS value.) It supports [V8Convert_Overloading overloading bound functions].
-  * Binding JS object properties to native shared or member properties or accessor/mutator functions/methods.
+  * Converting free functions, functors, and member functions into `v8::InvocationCallback` functions. These generated functions convert the !JavaScript-originated function arguments into native counterparts, forward the data to the original native function, and convert the return values back to something JS can use. (The `void` return type is translated to the `undefined` JS value.) It supports [V8Convert_Overloading overloading bound functions].
+  * Binding JS object properties to native shared or member properties or accessor/mutator functions/functors/methods.
 
 The first two core features give us all we need in order to be able to bind near-arbitrary C/C++ functions with !JavaScript, insofar as cross-language calling conventions and type conversions allow us to do so. The last feature is really just "sugar" (but also quite convenient at times). When combined, they give us everything we need to implement generic C++/JS class-binding mechanisms like [V8Convert_ClassCreator]. 
 
@@ -31,8 +31,7 @@ All of the API's type/function conversions are compile-time typesafe where possi
 
 == Credits ==
 
-  * James Pike, author of [https://github.com/tsa/vu8 vu8], helped me through the learning curve of getting function-pointer-style template arguments working. These allow for more readable templates when compared to the v8-juice API.
-  * Coen "The Pipe" Campman provided the support needed to get cvv8 working on MSVC 2010.
+The contributors are listed on the [Contributing] page.
 
 ==Downloading (Getting the Source Code)==
 
@@ -188,5 +187,6 @@ The [http://code.google.com/p/v8-juice/source/browse/#svn/convert/addons addons 
   * A [V8Convert_ByteArray ByteArray class] for handling binary data in JS space.
   * The [JSPDO] database access abstraction API.
   * A basic [V8Convert_Socket socket API].
+  * An [V8Convert_Whio i/o library].
 
 Each of the "addons" includes a basic v8 shell app which includes the JS bindings provided by that addon, making it simple to try out the code before including it into one's own project (on many Unix-like platforms, at least).
