--- a/wiki/JSPDO_API.wiki
+++ b/wiki/JSPDO_API.wiki
@@ -179,7 +179,7 @@ These objects are _only_ to be created by calling `JSPDO.prepare()`, and not via
 
 || *Method* || *Description* ||
 || `void finalize()` || Frees all resources associated with the statement. All statements _must_ be finalized after use or the db handle might get in an unusable state. ||
-|| `void bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index or name (in the form `:paramName`). The _type_ of the given value determines how the value is bound (e.g. as an integer, double, string, or BLOB ([V8Convert_ByteArray ByteArray]). Returns this object. ||
+|| `Statement bind(index[,value])` || Binds a value (default=NULL) to the given _1-based_ parameter index or name (in the form `:paramName`). The _type_ of the given value determines how the value is bound (e.g. as an integer, double, string, or BLOB ([V8Convert_ByteArray ByteArray]). Returns this object. ||
 || `Statement bind(Array)` || Binds each value in the given array to the next subsequent bindable parameter. e.g. `bind([7,null,11])` binds parameters 1 to 3 with the given values. Returns this object. ||
 || `Statement bind(Object)` || Binds each key/value pair in the given object, treating the object's keys as bound parameter names. e.g. `bind({':p1',':p2':...})`. Returns this object. ||
 || `Statement bind(Statement)` || Binds all columns from the `Statement` object argument to the columns in the current statement. This can be used, e.g. to copy results from one table into another. TODO: accept array of param column numbers/names to copy, instead of copying all. Returns this object. ||
